--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.11",
+    "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
+    "i": "^0.3.7",
+    "npm": "^9.6.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-web": "~0.18.10",
-    "expo-secure-store": "~12.1.1"
+    "react-native-pure-chart": "^0.0.24",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
