--- a/app.json
+++ b/app.json
@@ -18,16 +18,28 @@
       "supportsTablet": true,
       "config": {
         "usesNonExemptEncryption": false
-      }
+      },
+      "bundleIdentifier": "com.codergautamyt.CPSTest",
+      "bitcode": false
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.codergautamyt.CPSTest"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "9822dcca-a39f-4383-b587-6ef733afd128"
+      }
     }
+  },
+  "react-native-google-mobile-ads": {
+    "android_app_id": "ca-app-pub-3340825671684972~9322683958",
+    "ios_app_id": "ca-app-pub-3340825671684972~6293798578"
   }
 }
