--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "devbuild": "eas build --platform ios --profile development-simulator"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
