--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "devbuild": "eas build --platform ios --profile development-simulator"
+    "devbuild": "eas build --platform ios --profile development-simulator",
+    "devserver": "npx expo start --dev-server"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
