--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web",
     "devbuild": "eas build --platform ios --profile development-simulator",
     "buildandroid": "eas build --platform android --profile production",
-    "devserver": "npx expo start --dev-server"
+    "devserver": "npx expo start --dev-client"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
