--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "npm": "^9.6.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.7",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-google-mobile-ads": "^10.3.1",
     "react-native-pure-chart": "^0.0.24",
-    "react-native-safe-area-context": "^4.5.1",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-web": "~0.18.10"
   },
