--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "cpstest",
   "version": "1.0.1",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "devbuild": "eas build --platform ios --profile development-simulator",
     "buildandroid": "eas build --platform android --profile production",
@@ -24,13 +23,14 @@
     "npm": "^9.6.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-google-mobile-ads": "^10.3.1",
     "react-native-pure-chart": "^0.0.24",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
